packages/docs/content/4.0/api/CFormSelect.api.mdx

```jsx
import { CFormSelect } from '@coreui/react'
// or
import CFormSelect from '@coreui/react/src/components/form/CFormSelect'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **className** | A string of all className you want applied to the component. | `string` | - |
| **htmlSize** | Specifies the number of visible options in a drop-down list. | `number` | - |
| **invalid** | Set component validation state to invalid. | `boolean` | - |
| **onChange** | Method called immediately after the `value` prop changes. | `ChangeEventHandler<HTMLSelectElement>` | - |
| **options** | Options list of the select component. Available keys: `label`, `value`, `disabled`.<br/>Examples:<br/>- `options={[{ value: 'js', label: 'JavaScript' }, { value: 'html', label: 'HTML', disabled: true }]}`<br/>- `options={['js', 'html']}` | `Option[]` \| `string[]` | - |
| **size** | Size the component small or large. | `'sm'` \| `'lg'` | - |
| **valid** | Set component validation state to valid. | `boolean` | - |
| **value** | The `value` attribute of component.<br/>@controllable onChange | `string` \| `number` \| `string[]` | - |
