packages/docs/content/4.1/api/CFormSelect.api.mdx

```jsx
import { CFormSelect } from '@coreui/react'
// or
import CFormSelect from '@coreui/react/src/components/form/CFormSelect'
```

| Property | Description | Type | Default |
| --- | --- | --- | --- |
| **className** | A string of all className you want applied to the component. | `string` | - |
| **feedback** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable feedback. | `ReactNode` | - |
| **feedbackInvalid** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable feedback. | `ReactNode` | - |
| **feedbackValid** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable invalid feedback when using standard HTML form validation which applied two CSS pseudo-classes, `:invalid` and `:valid`. | `ReactNode` | - |
| **floatingLabel** <br/><div class="badge bg-primary">4.2.0+</div> | Provide valuable, actionable valid feedback when using standard HTML form validation which applied two CSS pseudo-classes, `:invalid` and `:valid`. | `ReactNode` | - |
| **htmlSize** | Specifies the number of visible options in a drop-down list. | `number` | - |
| **invalid** | Set component validation state to invalid. | `boolean` | - |
| **label** <br/><div class="badge bg-primary">4.2.0+</div> | Add a caption for a component. | `ReactNode` | - |
| **onChange** | Method called immediately after the `value` prop changes. | `ChangeEventHandler<HTMLSelectElement>` | - |
| **options** | Options list of the select component. Available keys: `label`, `value`, `disabled`.<br/>Examples:<br/>- `options={[{ value: 'js', label: 'JavaScript' }, { value: 'html', label: 'HTML', disabled: true }]}`<br/>- `options={['js', 'html']}` | `Option[]` \| `string[]` | - |
| **size** | Size the component small or large. | `'sm'` \| `'lg'` | - |
| **text** <br/><div class="badge bg-primary">4.2.0+</div> | Add helper text to the component. | `ReactNode` | - |
| **tooltipFeedback** <br/><div class="badge bg-primary">4.2.0+</div> | Display validation feedback in a styled tooltip. | `boolean` | - |
| **valid** | Set component validation state to valid. | `boolean` | - |
| **value** | The `value` attribute of component. | `string` \| `number` \| `string[]` | - |
